import { string,DefinedTermSet } from "./string,DefinedTermSet";


export class DefinedTerm extends Intangible {
  termCode: string;
  inDefinedTermSet: string,DefinedTermSet;


}
