classDiagram
  Gene -- Gene
  Gene -- BioChemEntity
  Gene -- AnatomicalStructure
  Gene -- DefinedTerm
  Gene -- AnatomicalSystem


class Gene {

  Gene alternativeOf
  string hasBioPolymerSequence
  BioChemEntity encodesBioChemEntity
  AnatomicalStructure expressedIn
  BioChemEntity expressedIn
  DefinedTerm expressedIn
  AnatomicalSystem expressedIn

 }
